# pincer

./: .gitignore  .mise.toml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  cliff.toml  clippy.toml  release-plz.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/actions/setup-rust/: action.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  release-plz.yml
.mise-tasks/: check  fix  format  lint  test
examples/github-api/: Cargo.toml
examples/github-api/src/: main.rs
examples/wikipedia-api/: Cargo.toml
examples/wikipedia-api/src/: main.rs
lib/pincer/: CHANGELOG.md  Cargo.toml  README.md
lib/pincer-core/: CHANGELOG.md  Cargo.toml  README.md
lib/pincer-core/src/: body.rs  client.rs  error.rs  lib.rs  method.rs  multipart.rs  param_meta.rs  path_template.rs  prelude.rs  request.rs  response.rs
lib/pincer-macro/: CHANGELOG.md  Cargo.toml  README.md
lib/pincer-macro/src/: attrs.rs  codegen.rs  expand.rs  lib.rs  query_derive.rs
lib/pincer/src/: api_client.rs  client.rs  config.rs  connector.rs  lib.rs  prelude.rs
lib/pincer/src/_tutorial/: chapter_0.rs  chapter_1.rs  chapter_2.rs  chapter_3.rs  mod.rs
lib/pincer/src/middleware/: basic_auth.rs  bearer_auth.rs  circuit_breaker.rs  decompression.rs  follow_redirect.rs  logging.rs  metrics.rs  mod.rs  rate_limit.rs  retry.rs
lib/pincer/tests/: integration_tests.rs  macro_tests.rs  middleware_tests.rs
