[package]
name = "github-api-example"
version = "0.1.0"
edition.workspace = true
publish = false

[dependencies]
pincer = { workspace = true, features = ["middleware-core"] }
serde.workspace = true
tokio = { workspace = true, features = ["full"] }

[dev-dependencies]
wiremock.workspace = true

[lints]
workspace = true

[package.metadata.cargo-machete]
ignored = ["serde"]  # Required for Serialize/Deserialize derive macros
