[package]
name = "pincer-core"
version = "0.2.0"
description = "Core types and traits for pincer declarative HTTP client"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
streaming = ["dep:futures-core", "dep:futures-util"]

[dependencies]
bytes.workspace = true
derive_more.workspace = true
futures-core = { workspace = true, optional = true }
futures-util = { workspace = true, optional = true }
http.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_urlencoded.workspace = true
serde_html_form.workspace = true
serde_path_to_error.workspace = true
url.workspace = true

[dev-dependencies]
assert2.workspace = true
insta.workspace = true

[lints]
workspace = true
